testdata/zkc/invalid/type_06.zkc
//error:2:1-15:cyclic definition for a
type outer = a
type b = a
type a = b
